--- a/app/views/memory/index.html.haml
+++ b/app/views/memory/index.html.haml
@@ -3,35 +3,35 @@
 %body
 	.center
 		%h1.center Memory Game
-		%button.btn.shuffle New Game
+		%button.btn.new_game New Game
 	.center
 		%span Number of tries:
 		%span.tries
 
 	.container
-		.row
-			.image.col.s2.card.death_knight
-			.image.col.s2.card.death_knight
-			.image.col.s2.card.demon_hunter
-			.image.col.s2.card.demon_hunter
-			.image.col.s2.card.druid
-			.image.col.s2.card.druid
-			.image.col.s2.card.hunter
-			.image.col.s2.card.hunter
-			.image.col.s2.card.mage
-			.image.col.s2.card.mage
-			.image.col.s2.card.monk
-			.image.col.s2.card.monk
-			.image.col.s2.card.paladin
-			.image.col.s2.card.paladin
-			.image.col.s2.card.priest
-			.image.col.s2.card.priest
-			.image.col.s2.card.rogue
-			.image.col.s2.card.rogue
-			.image.col.s2.card.shaman
-			.image.col.s2.card.shaman
-			.image.col.s2.card.warlock
-			.image.col.s2.card.warlock
-			.image.col.s2.card.warrior
-			.image.col.s2.card.warrior
+		.row.add_cards
+			-# .image.col.s2.card.death_knight
+			-# .image.col.s2.card.death_knight
+			-# .image.col.s2.card.demon_hunter
+			-# .image.col.s2.card.demon_hunter
+			-# .image.col.s2.card.druid
+			-# .image.col.s2.card.druid
+			-# .image.col.s2.card.hunter
+			-# .image.col.s2.card.hunter
+			-# .image.col.s2.card.mage
+			-# .image.col.s2.card.mage
+			-# .image.col.s2.card.monk
+			-# .image.col.s2.card.monk
+			-# .image.col.s2.card.paladin
+			-# .image.col.s2.card.paladin
+			-# .image.col.s2.card.priest
+			-# .image.col.s2.card.priest
+			-# .image.col.s2.card.rogue
+			-# .image.col.s2.card.rogue
+			-# .image.col.s2.card.shaman
+			-# .image.col.s2.card.shaman
+			-# .image.col.s2.card.warlock
+			-# .image.col.s2.card.warlock
+			-# .image.col.s2.card.warrior
+			-# .image.col.s2.card.warrior
 
