finished and ready for heroku deployment

--- a/app/assets/stylesheets/memory.scss
+++ b/app/assets/stylesheets/memory.scss
@@ -8,7 +8,7 @@ h1, h2, h3, h4, h5, h6, p, span {
 }
 
 body {
-	background-image: url(/assets/wow_wallpaper.jpg);
+	background-image: url("https://res.cloudinary.com/taylorwu21/image/upload/v1471749703/Nhi's%20Website/WoW%20Memory%20Game/wow_wallpaper.jpg");
 	background-size: cover;
 }
 
@@ -25,54 +25,54 @@ body {
 }
 
 .card {
-	background-image: url(/assets/wow_logo.png) !important;
+	background-image: url("https://res.cloudinary.com/taylorwu21/image/upload/v1471749701/Nhi's Website/WoW Memory Game/wow_logo.png") !important;
 	cursor: pointer;
 }
 
 .death_knight {
-	background-image: url('/assets/death_knight.png');
+	background-image: url("https://res.cloudinary.com/taylorwu21/image/upload/v1471749701/Nhi's%20Website/WoW%20Memory%20Game/death_knight.png");
 }
 
 .demon_hunter {
-	background-image: url('/assets/demon_hunter.png');
+	background-image: url("https://res.cloudinary.com/taylorwu21/image/upload/v1471749701/Nhi's%20Website/WoW%20Memory%20Game/demon_hunter.png");
 }
 
 .druid {
-	background-image: url('/assets/druid.png');
+	background-image: url("https://res.cloudinary.com/taylorwu21/image/upload/v1471749701/Nhi's%20Website/WoW%20Memory%20Game/druid.png");
 }
 
 .hunter {
-	background-image: url('/assets/hunter.png');
+	background-image: url("https://res.cloudinary.com/taylorwu21/image/upload/v1471749701/Nhi's%20Website/WoW%20Memory%20Game/hunter.png");
 }
 
 .mage {
-	background-image: url('/assets/mage.png');
+	background-image: url("https://res.cloudinary.com/taylorwu21/image/upload/v1471749701/Nhi's%20Website/WoW%20Memory%20Game/mage.png");
 }
 
 .monk {
-	background-image: url('/assets/monk.png');
+	background-image: url("https://res.cloudinary.com/taylorwu21/image/upload/v1471749701/Nhi's Website/WoW Memory Game/monk.png");
 }
 
 .paladin {
-	background-image: url('/assets/paladin.png');
+	background-image: url("https://res.cloudinary.com/taylorwu21/image/upload/v1471749701/Nhi's Website/WoW Memory Game/paladin.png");
 }
 
 .priest {
-	background-image: url('/assets/priest.png');
+	background-image: url("https://res.cloudinary.com/taylorwu21/image/upload/v1471749701/Nhi's%20Website/WoW%20Memory%20Game/priest.png");
 }
 
 .rogue {
-	background-image: url('/assets/rogue.png');
+	background-image: url("https://res.cloudinary.com/taylorwu21/image/upload/v1471749701/Nhi's%20Website/WoW%20Memory%20Game/rogue.png");
 }
 
 .shaman {
-	background-image: url('/assets/shaman.png');
+	background-image: url("https://res.cloudinary.com/taylorwu21/image/upload/v1471749701/Nhi's%20Website/WoW%20Memory%20Game/shaman.png");
 }
 
 .warlock {
-	background-image: url('/assets/warlock.png');
+	background-image: url("https://res.cloudinary.com/taylorwu21/image/upload/v1471749701/Nhi's%20Website/WoW%20Memory%20Game/warlock.png");
 }
 
 .warrior {
-	background-image: url('/assets/warrior.png');
+	background-image: url("https://res.cloudinary.com/taylorwu21/image/upload/v1471749701/Nhi's%20Website/WoW%20Memory%20Game/warrior.png");
 }
